--- a/5.6/index.html
+++ b/5.6/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <a href="http://www.bjfu.edu.cn">北京林业大学</a>
+    <table>
+        <tr>
+            <td>i</td>
+            <td>j</td>
+            <td>k</td>
+        </tr>
+    </table>
 </body>
 </html>
