--- a/5.6/index.html
+++ b/5.6/index.html
@@ -8,12 +8,24 @@
 </head>
 <body>
     <a href="http://www.bjfu.edu.cn">北京林业大学</a>
-    <table>
-        <tr>
+    <table border="5px">
+        <thead>
+            <td>表格1</td>
+            <td>表格2</td>
+            <td>表格3</td>
+        </thead>
+        <tbody>
             <td>i</td>
             <td>j</td>
             <td>k</td>
-        </tr>
+        </tbody>
     </table>
+    <div>快标签</div>
+    <div style="margin-top: 20px;margin-bottom: 20px;">独占一行</div>
+    <div style="width: 220px;height: 20px;display: inline; ">不独占一行，但无法设置宽高</div>
+    更改默认属性
+    <div></div>
+    <div style="width: 210px;height: 20px;display: inline-block;">不独占一行，可以设置宽高</div>
+    更改默认属性
 </body>
 </html>
