--- a/Web/6.17/index.html
+++ b/Web/6.17/index.html
@@ -17,7 +17,7 @@
             <a href="">邮箱会员</a>
             <a href="">海外用户登录</a>
             <a href="">官方APP</a>
-            <a href="">帮助</a>
+            <a href="">| 帮助</a>
             <a href="">邮箱公告</a>
         </div>
     </div>
@@ -57,6 +57,19 @@
                 <button class="buttom">         
                 </button>
             </form>
+        </div>
+    </div>
+    <div class="bottoms">
+        <div class="top1">
+            <a href="">网易首页 |</a>
+            <a href="">网易严选 |</a>
+            <a href="">政府公益热线 |</a>
+            <a href="">隐私政策 |</a>
+            <a href="">儿童隐私政策</a>
+        </div>
+        <div class="top2">
+            网易公司版权所有©1997-2021   ICP备案 粤B2-20090191-18  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;粤公网安备 44010602006299增值电信业务许可证 粤B2-20090191  B2-20090058 （数据来源：艾媒邮箱报告）
+            <img src="/Web/6.17/pic/gonganlogo.png" alt="" style="left: 345px;position: absolute;">
         </div>
     </div>
 </body>
